--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta http-equiv="refresh" content="60">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/assets/style/distrito.css">
+    <link rel="stylesheet" href="assets/style/distrito.css">
     <title> Distrito Segurança Eletrônica </title>
 </head>
 <body>
